# ChatArchive

./: .gitignore  AGENTS.md  Chat.manifest.toml  Project-README.md  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
docs/: ChatArchive-Roadmap.md  Phase 1-ArchiveViewerMaturity.md  Phase 1.5-TauriDurableArchiveFoundation.md  Phase 2-ArtifactExtraction.md  Phase2-QA-Report.md  Release-v0.1.1.md
scripts/: ingest-openai-history.js
scripts/qa/: audit-library.py  cdp-invoke.mjs  installer-lifecycle.ps1  native-phase2.ps1  phase2-release-gate.ps1
src/: App.tsx  archiveApi.ts  artifactLogic.ts  prism.d.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  importer.rs  main.rs  models.rs  project_intelligence.rs
tests/: setup.ts
tests/e2e/: phase2.spec.ts  phase3.spec.ts  phase4.spec.ts
tests/fixtures/: staticArchive.ts
tests/fixtures/malformed-export/: conversations-000.json
tests/fixtures/openai-export/: conversation_asset_file_names.json  conversations-000.json  generated-notes.txt
tests/unit/: artifactLogic.test.ts
