[package]
name = "chatarchive"
version = "0.1.1"
description = "Local-first AI chat archive browser"
authors = ["ChatArchive"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.4.1"
thiserror = "2.0.17"
url = "2.5.7"
walkdir = "2.5.0"
